# PD

./: .gitignore
Lab1/src/: ex1.py  ex2.py
Lab1/task/: Lab 1 PD.docx
Lab2/: .gitignore
Lab2/src/: cookie.py  main.py
Lab2/task/: Laborator 2 PD.docx
Lab3/dataset/bad/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+960 more)
Lab3/dataset/good/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+960 more)
Lab3/src/: part1.py  part2.py  part3.py  part4.py
Lab4/src/: lab3_export.py  main.py  main_window.py
Lab5/src/: main.py
Lab5/src/movie_comment_parser/: README.md  __init__.py  pyproject.toml
Lab5/src/movie_comment_parser/src/: parser.py
Lab6/src/movie_comment_parser/: __init__.py
Lab6/src/movie_comment_parser/src/movie_comment_parser.egg-info/: PKG-INFO  SOURCES.txt
Lab6/src/movie_comment_parser/tests/: parser_test.py
